@@ -30,6 +30,8 @@ public class SelfListener implements Listener {
         Player player = event.getPlayer();
         PrimarySkillType skill = event.getSkill();
 
+        UserManager.getPlayer(player).processUnlockNotifications(plugin, event.getSkill(), event.getSkillLevel());
+
         if(Config.getInstance().getScoreboardsEnabled())
             ScoreboardManager.handleLevelUp(player, skill);
 
@@ -63,7 +65,7 @@ public class SelfListener implements Listener {
         if (event.getXpGainReason() == XPGainReason.COMMAND)
         {
             //Update the XP Bar
-            mcMMOPlayer.processPostXpEvent(event.getXpGainReason(), primarySkillType, plugin);
+            mcMMOPlayer.processPostXpEvent(event.getXpGainReason(), primarySkillType, plugin, (int) event.getRawXpGained());
             return;
         }
 
@@ -72,7 +74,7 @@ public class SelfListener implements Listener {
         if (threshold <= 0 || !ExperienceConfig.getInstance().getDiminishedReturnsEnabled()) {
             // Diminished returns is turned off
             //Update the XP Bar
-            mcMMOPlayer.processPostXpEvent(event.getXpGainReason(), primarySkillType, plugin);
+            mcMMOPlayer.processPostXpEvent(event.getXpGainReason(), primarySkillType, plugin, (int) event.getRawXpGained());
             return;
         }
 
@@ -118,6 +120,6 @@ public class SelfListener implements Listener {
 
         //Update the XP Bar
         if(!event.isCancelled())
-            mcMMOPlayer.processPostXpEvent(event.getXpGainReason(), primarySkillType, plugin);
+            mcMMOPlayer.processPostXpEvent(event.getXpGainReason(), primarySkillType, plugin, (int) event.getRawXpGained());
     }
 }
