@@ -46,6 +46,7 @@ JSON.URL.Patreon=Support nossr50 and his work for mcMMO on Patreon!
 JSON.URL.Spigot=The official mcMMO Spigot Resource Page!
 JSON.URL.Translation=Translate mcMMO into other languages!
 JSON.URL.Wiki=The official mcMMO wiki!
+JSON.SkillUnlockMessage=[[GOLD]][ mcMMO[[YELLOW]] @[[DARK_AQUA]]{0} [[GOLD]]Rank [[DARK_AQUA]]{1}[[GOLD]] Unlocked! ]
 
 #This is the message sent to players when an ability is activated
 JSON.Notification.SuperAbility={0}
@@ -95,7 +96,7 @@ XPBar.Taming=Taming Lv.[[GOLD]]{0}
 XPBar.Unarmed=Unarmed Lv.[[GOLD]]{0}
 XPBar.Woodcutting=Woodcutting Lv.[[GOLD]]{0}
 #This is just a preset template that gets used if the 'ExtraDetails' setting is turned on in experience.yml (off by default), you can ignore this template and just edit the strings above
-XPBar.Complex.Template={0} [[GRAY]] {4}[[WHITE]]% [[GRAY]]([[WHITE]]{1}[[GRAY]]/[[WHITE]]{2}[[GRAY]])
+XPBar.Complex.Template={0} [[DARK_AQUA]] {4}[[WHITE]]% [[DARK_AQUA]]([[WHITE]]{1}[[DARK_AQUA]]/[[WHITE]]{2}[[DARK_AQUA]])
 # XP BAR Allows for the following variables -- {0} = Skill Level, {1} Current XP, {2} XP Needed for next level, {3} Power Level, {4} Percentage of Level
 # Make sure you turn on Experience_Bars.ThisMayCauseLag.AlwaysUpdateTitlesWhenXPIsGained if you want the XP bar title to update every time a player gains XP!
 # END STYLING
